# landauer

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
benchmark/: benchmark.py  benchmarks.json  list.py  recipes.json  run.py
benchmark/source/bencgen/: c11_10.v  c11_11.v  c11_12.v  c11_13.v  c11_14.v  c11_15.v  c11_16.v  c11_3.v  c11_4.v  c11_5.v  c11_6.v  c11_7.v  c11_8.v  c11_9.v  c13_10.v  c13_11.v  c13_12.v  c13_13.v  c13_14.v  c13_15.v  c13_16.v  c13_3.v  c13_4.v  c13_5.v  c13_6.v  c13_7.v  c13_8.v  c13_9.v  c17_10.v  c17_11.v  c17_12.v  c17_13.v  c17_14.v  c17_15.v  c17_16.v  c17_3.v  c17_4.v  c17_5.v  c17_6.v  c17_7.v  (+16 more)
benchmark/source/bencgen/balanced/: c11_10.v  c11_11.v  c11_12.v  c11_13.v  c11_3.v  (+35 more)
benchmark/source/mcnc/: 5xp1.v  9sym.v  9symml.v  C1355.v  C17.v  C1908.v  C2670.v  C3540.v  C432.v  C499.v  C5315.v  C6288.v  C7552.v  C880.v  Z5xp1.v  Z9sym.v  al2.v  alcom.v  alu1.v  alu2.v  alu3.v  alu4.v  amd.v  apex1.v  apex2.v  apex3.v  apex4.v  apex5.v  apex6.v  apex7.v  apla.v  b1.v  b10.v  b11.v  b12.v  b2.v  b3.v  b4.v  b7.v  b9.v  (+178 more)
examples/: count.py  half_adder.py  multiplexer.py
notebooks/: Greedy.ipynb  Sorting.ipynb
src/landauer/: embed.py  entropy.py  evaluate.py  fanout.py  framework.py  graph.py  parse.py  placement.py  plot.py  simulate.py  summary.py  traversal.py
src/landauer/algorithms/: __init__.py  aco.py  greedy.py  linear.py  naive.py  random.py  sorting.py  summary.py  tnano2019.py
src/landauer/cmd/: entropy.py  evaluate.py  graph.py  parse.py  summary.py
test/: test.py
(+20 files in other folders)
