[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "landauer"
version = "0.0.1"
authors = [
  { name="Marco Diniz Sousa", email="mtdsousa@gmail.com" },
]
description = "Python toolkit to support fundamental energy limits and reversible computing research"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'antlr4-verilog == 4.0.0',
    'graphviz ~= 0.19.1',
    'matplotlib ~= 3.5.1',
    'networkx ~= 2.6.3',
    'pydot ~= 1.4.2',
    'seaborn ~= 0.11.2',
    'tqdm ~= 4.64.0'
]

[project.urls]
"Homepage" = "https://github.com/mtdsousa/landauer"
"Bug Tracker" = "https://github.com/mtdsousa/landauer/issues"